ctm-sf-homeloan-app/main/default/objects/VOI__c/VOI__c.object-meta.xml
<CustomObject>
    <description>Verification of Identity</description>
    <label>VOI</label>
    <nameField>
        <label>VOI Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>VOI</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>