ctm-sf-homeloan-app/main/default/objects/VOI__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>VOI</relationshipLabel>
    <relationshipName>VOI</relationshipName>
    <type>Lookup</type>
</CustomField>