ctm-sf-homeloan-app/main/default/objects/VOI__c/fields/Liveness__c.field-meta.xml
<CustomField>
    <fullName>Liveness__c</fullName>
    <label>Liveness</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PASS</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>