ctm-sf-homeloan-app/main/default/objects/VOI__c/fields/Total_Process_Time__c.field-meta.xml
<CustomField>
    <fullName>Total_Process_Time__c</fullName>
    <label>Total Process Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>