ctm-sf-homeloan-app/main/default/objects/VOI__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Main</fullName>
            </value>
            <value>
                <fullName>VOI</fullName>
            </value>
            <value>
                <fullName>Flow V2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>